--- a/SimpleCanculator/index.html
+++ b/SimpleCanculator/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oddiy Kalkulyator</title>
+    <title>Kalkulyator</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -28,6 +28,6 @@
             <button onclick="appendToResult('/')">/</button>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script  src="main.js"></script>
 </body>
 </html>
